--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,9 @@ allprojects {
         // for more information about repositories.
     }
 
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = "UTF-8"
-        options.release = 17
+        options.release = 17 as Property<Integer>
     }
 
     java {
