--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ allprojects {
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = "UTF-8"
-        options.release = 17 as Property<Integer>
+        options.release = 17
     }
 
     java {
