--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "1.1-SNAPSHOT" apply false
+    id "io.github.pacifistmc.forgix" version "1.2.6"
 }
 
 architectury {
@@ -48,4 +49,10 @@ allprojects {
     java {
         withSourcesJar()
     }
+}
+
+forgix {
+    group = "net.crossscar.cshacks.multi"
+    mergedJarName = "csHacks-Merged"
+    outputDir = "build/libs/merged"
 }
